--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
        "group",
        "manager"
     ],   
- "repository": "https://github.com/Noob-Mukesh/MukeshRobot",
+ "repository": "https://github.com/lizyangelxdark/ExxonRobot",
  "stack": "heroku-22",
  "addons": [
     {
@@ -45,7 +45,7 @@
     "EVENT_LOGS": {
        "description": "Event logs channel to note down important bot level events, recommend to make this public. ex: '-123456'",
        "required": true,
-       "value": ""
+       "value": "-1001887975078"
     },
     "MONGO_DB_URI": {
        "description": "Required for database connections.",
@@ -55,17 +55,17 @@
     "CASH_API_KEY": {
         " description": " Get your API key from https://www.alphavantage.co/support/#api-key",
         "required": false,
-        "value": ""
+        "value": "QYMT5UW4L698UBL8"
     },
     "TIME_API_KEY": {
         "description": " Get your API key from https://timezonedb.com/api",
         "required": false,
-        "value": ""
+        "value": "NEZV7VJVN1C0"
     },
     "CHATBOT_API": {
         "description":"Get your API key from @FallenChat_Bot using /token",
         "required": false,
-        "value": ""
+        "value": "6045877543-fallen-ugbz44zbgu"
     },
         
     "OWNER_ID": {
@@ -76,12 +76,12 @@
     "START_IMG": {
        "description": "Telegraph link of the image which will be shown at start command.",
        "required": true,
-       "value": ""
+       "value": "https://telegra.ph/file/5e4ff2e980dceae62afdb.jpg"
     },
     "SUPPORT_CHAT": {
        "description": "Your Telegram support group chat username where your users will go and bother you with shit Example - The_support_chat.",
        "required": true,
-       "value": ""
+       "value": "cerenasistanchannel"
     },
     "TOKEN": {
        "description": "Get bot token from @BotFather on TG",
