--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,17 @@ services:
   worker:
     build: .
     environment:
+      API_ID: $API_ID
+      API_HASH: $API_HASH
+      ALLOW_EXCL: $ALLOW_EXCL
+      DEL_CMDS: $DEL_CMDS   
+      ENV: $ENV  
+      EVENT_LOGS: $EVENT_LOGS  
+      MONGO_DB_URI: $MONGO_DB_URI
+      CASH_API_KEY: $CASH_API_KEY
+      TIME_API_KEY: $TIME_API_KEY
+      CHATBOT_API: $ CHATBOT_API
+      OWNER_ID: $OWNER_ID
+      START_IMG: $START_IMG
       SUPPORT_CHAT: $SUPPORT_CHAT
-      SUDO_USERS: $SUDO_USERS
-      SESSION: $SESSION
-      API_ID: $API_ID  # defaults to None
-      API_HASH: $API_HASH  # defaults to None
-      OWNER_ID: $OWNER_ID  # defaults to None
-      BOT_TOKEN: $BOT_TOKEN # Not manda
+      TOKEN: $TOKEN
